[package]
name = "vanderlinde"
version = "0.1.0"
authors = ["Ganesha Danu <ganeshadanu1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "chrono"] }
dotenv = "0.15.0"
serde = "1.0.116"
serde_derive = "1.0.116"
bcrypt = "0.8.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
frank_jwt = "3.1.2"
serde_json = "1.0.57"
# juniper_rocket = "0.5.2"
chrono = "0.4.15"
rocket_cors = "0.5.2"
nanoid = "0.3.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool", "uuid"]

# [dependencies.juniper]
# version = "0.14.2"
# features = ["serde_json", "uuid", "chrono"]